header on safari height issue #2

--- a/style.css
+++ b/style.css
@@ -214,6 +214,7 @@ header div:first-of-type {
     text-align: center;
     position: relative;
     margin: 15px 0;
+    height: 37px;
 }
 
 
